# ascii_banner_mcp

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  glama.json  pyproject.toml
.docker/: Dockerfile  docker-compose.yml
.github/workflows/: ci.yml
config/: README.md  mcp-config-streamable-http.example.json  mcp-config.example.json
src/ascii_banner_mcp/: __init__.py  server.py
tests/: __init__.py  test_server.py
